--- a/exercicios/ex022/fundo003N.html
+++ b/exercicios/ex022/fundo003N.html
@@ -8,7 +8,7 @@
 </head>
 <style>
     div.bloco {
-        background-image: url('wallpaper003.jpg');
+        background-image: url('imagens/wallpaper003.jpg');
         height: 200px;
         border: 1px solid black;
         border-radius: 20px;
