fiz o exercícios fundo006N

--- a/exercicios/ex022/imagens/fundo006N.html
+++ b/exercicios/ex022/imagens/fundo006N.html
@@ -4,20 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url('wallpaper002.jpg');
-            background-position: center bottom;
-            background-repeat: no-repeat;
+            background-position: center center;
+            background-repeat: no-repat;
             background-size: cover;
+            background-attachment:fixed */
 
-        }
+            /* Shorthand - background
+                color > image > position > repeat > [size] > attachment
+            */
+            background:black url('wallpaper002.jpg') center center no-repeat  fixed;
+            background-size: cover;
+        
+            }
+             
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -28,6 +36,8 @@
 <body>
   <main>
       <h1>Teste de Imagens de Fundo</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dolorem vitae iste minus temporibus aperiam autem nulla eos architecto nisi, eum, recusandae corrupti unde doloribus qui. Repellat veritatis mollitia illum?Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eum deserunt molestias, delectus asperiores ipsam distinctio odit quae sit optio quidem at cum enim a? Labore cum beatae quisquam eos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet illo consectetur placeat maxime molestias eaque saepe ea blanditiis dolores maiores, odit quasi quidem facere necessitatibus est? Quibusdam modi ratione minima?</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dolorem vitae iste minus temporibus aperiam autem nulla eos architecto nisi, eum, recusandae corrupti unde doloribus qui. Repellat veritatis mollitia illum?Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eum deserunt molestias, delectus asperiores ipsam distinctio odit quae sit optio quidem at cum enim a? Labore cum beatae quisquam eos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet illo consectetur placeat maxime molestias eaque saepe ea blanditiis dolores maiores, odit quasi quidem facere necessitatibus est? Quibusdam modi ratione minima?</p>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dolorem vitae iste minus temporibus aperiam autem nulla eos architecto nisi, eum, recusandae corrupti unde doloribus qui. Repellat veritatis mollitia illum?Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eum deserunt molestias, delectus asperiores ipsam distinctio odit quae sit optio quidem at cum enim a? Labore cum beatae quisquam eos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet illo consectetur placeat maxime molestias eaque saepe ea blanditiis dolores maiores, odit quasi quidem facere necessitatibus est? Quibusdam modi ratione minima?</p>
   </main>  
 </body>
