--- a/exercicios/ex023/tabela06.html
+++ b/exercicios/ex023/tabela06.html
@@ -34,7 +34,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis nostrum quaerat saepe fugiat in rem, odio eaque, pariatur reiciendis accusantium, deleniti amet consequuntur. Culpa beatae minima, facere optio nesciunt soluta!</p>
     <div id="container">
         <table>
-            <caption>Telas responsivas</caption>
+            <caption>Vendas de produtos por mês</caption>
             <thead>
                 <tr>
                     <th>Produto</th>
