--- a/exercicios/ex024/paginas-extras/pag001.html
+++ b/exercicios/ex024/paginas-extras/pag001.html
@@ -8,7 +8,7 @@
     <style>
         body{
             font-family: Arial, Helvetica, sans-serif;
-            background-color: lightblue;
+            background-color: rgb(12, 180, 236);
             color: black;
         }
         body {
