Exercicios de Iframe

--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -26,7 +26,7 @@
     </ul>
     
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt, facere! Nesciunt, aut. Veniam dolor illum, culpa libero eligendi aliquam blanditiis voluptatem saepe vero provident eos alias possimus? Quod, animi cupiditate?Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde architecto, perspiciatis quas placeat sint perferendis corporis animi modi ratione laborum aliquam? Natus quis consequatur animi harum alias sunt vero error.</p>
-    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções</h1><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique eum quas repellat nesciunt voluptatum iure voluptate, ea nulla sunt libero deserunt commodi numquam esse quos? Sed nulla ipsum repellat aspernatur?Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque incidunt nostrum repellat accusamus odio temporibus cupiditate, voluptatibus aliquid saepe labore nesciunt reiciendis, provident voluptas quisquam dicta a hic nobis accusantium.</p><img src='imagens/cursoemvideo-logo.png.png'>">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções</h1><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique eum quas repellat nesciunt voluptatum iure voluptate, ea nulla sunt libero deserunt commodi numquam esse quos? Sed nulla ipsum repellat aspernatur?Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque incidunt nostrum repellat accusamus odio temporibus cupiditate, voluptatibus aliquid saepe labore nesciunt reiciendis, provident voluptas quisquam dicta a hic nobis accusantium.</p><img src='imagens/cursoemvideo-logo.png'>">
         <p>Infelizmente seu navegador não é compatível com isso</p>
     </iframe>
     
