--- a/exercicios/ex024/pag005.html
+++ b/exercicios/ex024/pag005.html
@@ -7,7 +7,7 @@
     <title>JavaScript</title>
     <style>
         body {
-
+            font-family: Arial, Helvetica, sans-serif;
         }
     </style>
 </head>
